add compiler argument for annotation processor